changed how null is calculated in simulate module

--- a/notebooks/working_example.ipynb
+++ b/notebooks/working_example.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "satisfied-visitor",
+   "id": "stock-exploration",
    "metadata": {},
    "source": [
     "## Simulate a matrix of binary data"
@@ -46,7 +46,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "distant-factory",
+   "id": "improved-transsexual",
    "metadata": {},
    "outputs": [
     {
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "manual-parking",
+   "id": "municipal-study",
    "metadata": {},
    "source": [
     "## Fit model to data"
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "id": "nutritional-collection",
    "metadata": {},
    "outputs": [
@@ -102,7 +102,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "01:04 | DEBUG   | \u001b[1m\u001b[35mget_unique_data\u001b[0m\u001b[1m\u001b[0m | \u001b[34m\u001b[1muniq array shape: (7, 12)\u001b[0m\n"
+      "02:24 | DEBUG   | \u001b[1m\u001b[35mget_unique_data\u001b[0m\u001b[1m\u001b[0m | \u001b[34m\u001b[1muniq array shape: (7, 12)\u001b[0m\n"
      ]
     },
     {
@@ -114,7 +114,7 @@
        " 'convergence': True}"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -123,6 +123,48 @@
     "TEST = hogtie.DiscreteMarkovModel(TREE_ONE, DATA, 'ARD', prior=0.5)\n",
     "TEST.optimize()\n",
     "TEST.model_fit"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "great-gabriel",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([4, 6, 1, 2, 3, 0, 3, 3, 5, 4])"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "TEST.inverse"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "familiar-liability",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.7913480011331022"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "TEST.alpha"
    ]
   }
  ],
